--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,10 @@
 
 buildscript {
     ext {
-        kotlin_version = '1.1.60'
+        kotlin_version = '1.1.61'
         support_version = '26.1.0'
+        retrofit_version = '2.3.0'
+        kodein_version = '4.1.0'
     }
 
     repositories {
